--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
       <a href="#" id="scroll-page-top" class="center-block bounce" style="width: 50px; display: none;"><%= image_tag "icons/up.png", width: "50", height: "49" %></a>
       <a href="#" id="scroll-page-down" class="center-block bounce" style="width: 50px; display: none;"><%= image_tag "icons/down.png", width: "50", height: "49" %></a>
     </div>
-    <div class="row hidden-xs logos">
+    <div class="row hidden-xs logos" style="z-index:1031;">
       <div class="col-sm-6">
   			<%= image_tag "footer-left.png", width: "207", height: "56" %>
       </div>
