all the polishes

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -8171,3 +8171,14 @@ a.gold {
   }
 
 }
+.right-text {
+  text-align:right;
+}
+.unit_row:hover {
+  color: #fff !important;
+}
+.tower {
+  .page_title {
+    font-size: 44px !important;
+  }
+}
