--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,9 +7,9 @@
     </div>
     <%= render "layouts/flash_messages" %>
     <div class="button-bar text-center">
-      <a href="/listings" class="btn btn-gold text-uppercase">Buyers</a>
-      <a href="/listings" class="btn btn-gold text-uppercase">Sellers</a>
-      <a href="/listings?rent=1" class="btn btn-gold text-uppercase">Renters</a>
+      <a href="/listings" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR SALE</a>
+      <a href="/listings?rent=1" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR RENT</a>
+      <a href="/evaluation" class="btn btn-gold text-uppercase btn-lg">SELL MY ICE CONDO</a>
 
       <div class="row">
         <div class="col-sm-8 col-sm-push-2 col-md-6 col-md-push-3 text-center">
@@ -166,14 +166,14 @@
             <%= image_tag "logo.png", width: "75", height: "29", class: "pull-left", style: "margin-top: -6px;" %>
             <span class="xsmall-font pull-left" style="line-height: 29px">TORONTO’S MOST LUXURIOUS CONDOMINIUMS</span></div>
         </div>
-        <a href="/listings" class="btn btn-gold text-uppercase">Buyers</a>
-        <a href="/listings" class="btn btn-gold text-uppercase">Sellers</a>
-        <a href="/listings?rent=1" class="btn btn-gold text-uppercase">Renters</a>
+        <a href="/listings" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR SALE</a>
+        <a href="/listings?rent=1" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR RENT</a>
+        <a href="/evaluation" class="btn btn-gold text-uppercase btn-lg">SELL MY ICE CONDO</a>
       </div>
       <div class="center-block" style="padding-bottom: 20px;">
         <%= image_tag "footer-left.png", width: "207", height: "56", style: "padding-right: 40px;" %>
         <%= link_to image_tag("footer-right1.png", width: "100", height: "56"), "http://www.cloudrealty.ca", target: "_blank" %>
-        <%= link_to image_tag("footer-right2.png", width: "150", height: "56"), "http://www.mississauga-realestate.com/", target: "_blank" %>
+        <%= image_tag("footer-right2.png", width: "150", height: "56") %>
       </div>
     </div>
   </section>
