--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
   			<%= image_tag "footer-left.png", width: "207", height: "56" %>
       </div>
       <div class="col-sm-6">
-        <%= link_to image_tag("footer-right2.png", width: "150", height: "56"), "http://www.mississauga-realestate.com/", target: "_blank", class: "pull-right" %>
+        <%= image_tag("footer-right2.png", width: "150", height: "56", class: "pull-right") %>
         <%= link_to image_tag("footer-right1.png", width: "100", height: "56"), "http://www.cloudrealty.ca", target: "_blank", class: "pull-right" %>
       </div>
     </div>
