--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,13 +28,13 @@
         <% else %>
           <li><a href="#modal-login" data-toggle="modal">LOGIN / REGISTER</a></li>
         <% end %>
-        <li><a href="/contact?u=<%=u request.original_url %>">CONTACT US</a></li>
+        <li><a href="/contact?u=<%=u request.original_url %>">FAST RESPONSE&nbsp;&nbsp;<i class='fa fa-phone fa-rotate-90 fa-2x'></i></a></li>
         <li>
           <a href="#" class="menu-toggle hidden-xs">
+            &nbsp;&nbsp;&nbsp;&nbsp;MENU&nbsp;&nbsp;
             <div class="hamburger">
               <span></span>
             </div>
-            &nbsp;&nbsp;MENU
           </a>
         </li>
       </ul>
