--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -21,7 +21,7 @@
         <li class="pull-right"><a href="" class="gold" data-toggle="collapse" data-target="#collapseFilters" aria-expanded="false" aria-controls="collapseFilters">FILTER LISTINGS&nbsp;&nbsp;<i class="fa fa-caret-down"></i></a></li>
       </ul>
     </div>
-    <div class="collapse" id="collapseFilters">
+    <div class="collapse in" id="collapseFilters">
         <form name="search_filters_form" novalidate ng-submit="refine_search_results()" id="search_filters_details_fields">
           <span class="filter_title gold">FILTER LISTINGS</span><br class='hidden-lg'>
           <%= select_tag 'custom_search[search_beds]', options_for_select(beds_options, params[:custom_search].try(:[], :search_beds)), class: "selectpicker", id: "search_beds_select", "ng-model" => "search_filters.custom_search.search_beds", "ng-init" => "search_filters.custom_search.search_beds = '#{params[:custom_search].try(:[], :search_beds)}'" %>&nbsp;&nbsp;
@@ -36,14 +36,14 @@
     <br>
     <div class="condo" ng-repeat="o_listing in listings">
       <div class="col-md-5">
-        <a class="gold" href="/listings/{{o_listing.slug}}">
+        <a class="gold" href="/{{o_listing.s_r == 'Lease' ? 'condos-for-rent' : 'condos-for-sale'}}/{{o_listing.slug}}">
           <img ng-src="{{o_listing.main_image}}" onerror="this.onerror=null;this.src='/missing-image.png';" class="img-responsive">
         </a>
       </div>
       <div class="col-md-7">
         <div class="row">
           <div class="col-sm-9">
-            <h3><a class="gold" href="/listings/{{o_listing.slug}}">Unit #{{o_listing.unit_num}}</a><br>Floor {{o_listing.stories}}</h3>
+            <h3><a class="gold" href="/{{o_listing.s_r == 'Lease' ? 'condos-for-rent' : 'condos-for-sale'}}/{{o_listing.slug}}">Unit #{{o_listing.apt_num}}</a><br>Floor {{o_listing.stories}}</h3>
           </div>
           <div class="col-sm-3">
             <div class="alert-info" ng-show="o_listing.created_at > ('<%= 48.hours.ago %>' | date)">NEW</div>
@@ -57,17 +57,17 @@
           <div class="col-lg-offset-2 col-lg-5">
             <ul class="list-unstyled">
               <li><span class="gold">ADDRESS:</span> {{o_listing.addr}}</li>
-              <li><span class="gold">MLS:</span> {{o_listing.ml_num}}</li>
-              <li><span class="gold">SQ.FT:</span> {{o_listing.sqft}}</li>
               <li><span class="gold">BEDROOMS:</span> {{o_listing.br}}</li>
               <li><span class="gold">BATHROOMS:</span> {{o_listing.bath_tot}}</li>
+              <li><span class="gold">SQ.FT:</span> {{o_listing.sqft}}</li>
+              <li><span class="gold">MLS:</span> {{o_listing.ml_num}}</li>
             </ul>
           </div>
           <div class="col-lg-5 text-right-lg">
-            <h2 class="gold price">{{o_listing.lp_dol ? (o_listing.lp_dol | currency : "$CAD ").slice(0, -3) : "--"}}</h2>
+            <h2 class="gold price">{{o_listing.lp_dol ? (o_listing.lp_dol | currency : "$").slice(0, -3) : "--"}}</h2>
 
-            <div class="text-xsmall vspace">Ice is a way of life, it is at once urban and close to nature</div>
-            <a class="btn btn-gold" href="/listings/{{o_listing.slug}}">More Information</a>
+            <div class="text-xsmall vspace"></div>
+            <a class="btn btn-gold" href="/{{o_listing.s_r == 'Lease' ? 'condos-for-rent' : 'condos-for-sale'}}/{{o_listing.slug}}">More Information</a>
           </div>
         </div>
         <hr>
@@ -81,7 +81,7 @@
       <%= image_tag "footer-left.png", width: "207", height: "56" %>
     </div>
     <div class="col-sm-6">
-      <%= link_to image_tag("footer-right2.png", width: "150", height: "56"), "http://www.mississauga-realestate.com/", target: "_blank", class: "pull-right" %>
+      <%= image_tag("footer-right2.png", width: "150", height: "56", class: "pull-right") %>
       <%= link_to image_tag("footer-right1.png", width: "100", height: "56"), "http://www.cloudrealty.ca", target: "_blank", class: "pull-right" %>
     </div>
   </div>
