--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,8 +7,8 @@
     </div>
     <%= render "layouts/flash_messages" %>
     <div class="button-bar text-center">
-      <a href="/listings" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR SALE</a>
-      <a href="/listings?rent=1" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR RENT</a>
+      <a href="/condos-for-sale" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR SALE</a>
+      <a href="/condos-for-rent" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR RENT</a>
       <a href="/evaluation" class="btn btn-gold text-uppercase btn-lg">SELL MY ICE CONDO</a>
 
       <div class="row">
@@ -166,8 +166,8 @@
             <%= image_tag "logo.png", width: "75", height: "29", class: "pull-left", style: "margin-top: -6px;" %>
             <span class="xsmall-font pull-left" style="line-height: 29px">TORONTO’S MOST LUXURIOUS CONDOMINIUMS</span></div>
         </div>
-        <a href="/listings" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR SALE</a>
-        <a href="/listings?rent=1" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR RENT</a>
+        <a href="/condos-for-sale" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR SALE</a>
+        <a href="/condos-for-rent" class="btn btn-gold text-uppercase btn-lg">ICE CONDOS FOR RENT</a>
         <a href="/evaluation" class="btn btn-gold text-uppercase btn-lg">SELL MY ICE CONDO</a>
       </div>
       <div class="center-block" style="padding-bottom: 20px;">
