--- a/app/views/contacts/new_condo_eval.html.erb
+++ b/app/views/contacts/new_condo_eval.html.erb
@@ -30,7 +30,7 @@
 		<%= f.input :message, :required => true, as: :text, label: false, input_html: { class: "contact-form-field", placeholder: "Any additional information..." } %>
 	</div>
 	<div class="contact-form-phone">
-		<label class="contact-form-label" for="phone">Best time to call</label>
+		<label class="contact-form-label" for="phone">PLANNING TO SELL IN</label>
 		<%= f.input :time_frame, as: :select, include_blank: false, collection: ["I want to sell my condo now", "In the next 3 months", "In the next 6 months", "I’m just curious about my condo’s value"], label: false, input_html: { class: "contact-form-field"} %>
 	</div>
 	<div class= "hidden">
