--- a/app/views/home/location.html.erb
+++ b/app/views/home/location.html.erb
@@ -76,24 +76,69 @@
     <br>
     <div class="about">
       <div class="col-md-5">
-        <%= image_tag "walkscore-map.png", class: "img-responsive" %>
+        <%= image_tag "walkscore-map.png", class: "img-responsive" %><br><br>
+        <%= image_tag "location_img.png", class: "img-responsive" %>
       </div>
       <div class="col-md-6 col-md-offset-1">
-        <i>From Downtown Toronto</i><br><br>
-        <ul class="list-unstyled">
-          <li><span class="gold">CAR:</span> 3 min</li>
-          <li><span class="gold">BUS:</span> 16 min</li>
-          <li><span class="gold">BIKE:</span> 5 min</li>
-          <li><span class="gold">WALKING:</span> 19 min</li>
-          <hr class="gold">
-          <p>
-            Fantastic location in the heart of Toronto's South Core. Less than 5 minutes walk to the ACC, Rogers Centre, the Central Business District, the Lake and Union Station.
-          </p>
-        </ul>
+        <div class="row">
+          <div class="col-md-4">
+            WALKERS PARADISE<br><br>
+            <ul class="list-unstyled">
+              <li><span class="gold">UNION STATION:</span> 9 min</li>
+              <li><span class="gold">LONGOS:</span> 1 min</li>
+              <li><span class="gold">ACC:</span> 5 min</li>
+              <li><span class="gold">ROGERS CENTRE:</span> 8 min</li>
+              <li><span class="gold">WATERFRONT:</span> 4 min</li>
+              <hr class="gold">
+            </ul>
+          </div>
+          <div class="col-md-4">
+            TRANSIT SCORE<br><br>
+            <span class="gold">100</span><br><br>
+            Direct access to PATH system.<br><br>
+            Instant access to subway, bus, and streetcar
+          </div>
+          <div class="col-md-4">
+            BIKE SCORE<br><br>
+            <span class="gold">83</span><br><br>
+          </div>
+        </div><br>
+        <div class="row">
+          <div class="col-md-12">
+            AREA INFLUENCES & NEARBY ATRACTIONS<br><br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <span class="gold">ARTS</span><br><br>
+            Harbourfront<br><br>
+            Music Garden<br><br>
+            Four Seasons Centre<br><br>
+            The Sony Centre<br><br>
+            The Performing Arts<br><br>
+            The Royal Alex & Princess of WalesTheatre<br><br>
+          </div>
+          <div class="col-md-6">
+            <span class="gold">FINE DINING</span><br><br>
+            Mark McEwen’s Bymark<br><br>
+            Franco Prevedello’s NotaBene<br><br>
+            Jump<br><br>
+            Canoe<br><br>
+            Harbour Sixty Steakhouse<br><br>
+          </div>
+        </div><br>
+        <div class="row">
+          <div class="col-md-6">
+            <span class="gold">SHOPPING</span><br><br>
+            Longo’s <br><br>
+            Sobey’s<br><br>
+            St. Lawrence Market<br><br>
+          </div>
+        </div>
       </div>
     </div>
     <br><br>
-    <hr class="gold vspace">
+    <hr class="gold vspace" id="floors">
     <div class="row">
       <div class="col-md-6">
         <span>TOWER 1</span>
