--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -47,14 +47,22 @@
   <div id="menu-scroll" class="nano">
     <div class="nano-content">
       <ul class="nav">
-        <% l = MenuLocation.where(name: "Header").first %>
-        <% l.menu_items.each do |m| %>
-          <% if m.title.downcase == "contact us" || m.title.downcase == "condo evaluation" %>
-            <li class="text-uppercase"><%= link_to m.title, "#{m.url}?u=#{u request.original_url}" %></li>
-          <% else %>
-            <li class="text-uppercase"><%= link_to m.title, m.url %></li>
-          <% end %>
-        <% end if l %>
+        <li class="text-uppercase"><%= link_to "Home", "/" %></li>
+        <li class="text-uppercase"><%= link_to "Buyers", "" %></li>
+        <li class="text-uppercase assub"><%= link_to "condos for sale", "/condos-for-sale" %></li>
+        <li class="text-uppercase"><%= link_to "Sellers", "" %></li>
+        <li class="text-uppercase assub"><%= link_to "why sell with us", "/" %></li>
+        <li class="text-uppercase assub"><%= link_to "sell my condo", "/evaluation?u=#{u request.original_url}" %></li>
+        <li class="text-uppercase assub"><%= link_to "what's my condo worth", "/evaluation?u=#{u request.original_url}" %></li>
+        <li class="text-uppercase"><%= link_to "Renters", "" %></li>
+        <li class="text-uppercase assub"><%= link_to "condos for lease", "/condos-for-rent" %></li>
+        <li class="text-uppercase"><%= link_to "ice condo market data", "/" %></li>
+        <li class="text-uppercase"><%= link_to "Reviews", "/reviews" %></li>
+        <li class="text-uppercase"><%= link_to "location", "/location" %></li>
+        <li class="text-uppercase"><%= link_to "floor plans", "/location#floors" %></li>
+        <li class="text-uppercase"><%= link_to "gallery", "/gallery" %></li>
+        <li class="text-uppercase"><%= link_to "about us", "/about" %></li>
+        <li class="text-uppercase"><%= link_to "contact us", "/contact?u=#{u request.original_url}" %></li>
       </ul>
     </div>
   </div>
