--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -7286,7 +7286,7 @@ footer {
   right: 0;
   color: #c4b257;
   font-size: 10px;
-  z-index: 1031;
+  z-index: 1029;
 }
 footer hr {
   border-top: 5px #c4b257 solid;
@@ -7918,14 +7918,19 @@ transition: all 500ms ease-in-out;-webkit-transition: all 500ms ease-in-out;}
 .active .hamburger > span:after {transform: rotate(-45deg);-webkit-transform: rotate(-45deg);-moz-transform: rotate(-45deg);-ms-transform: rotate(-45deg);-o-transform: rotate(-45deg);}
 
 
-.nav-menu{width:320px;position:fixed;top:81px;bottom:0;background-color:#000;z-index:1030;box-shadow:-1px 0 2px rgba(0,0,0,.2);-webkit-box-shadow:-1px 0 2px rgba(0,0,0,.2);padding:25px 0px;text-align: right;
+.nav-menu{width:370px;position:fixed;top:81px;bottom:0;background-color:#000;z-index:1030;box-shadow:-1px 0 2px rgba(0,0,0,.2);-webkit-box-shadow:-1px 0 2px rgba(0,0,0,.2);padding:15px 0px;text-align: right;
 right: -100%;-webkit-transition: all 350ms;transition: all 350ms;}
-.nav-menu .nav > li > a{font-size: 16px;font-family: 'gotham_htf_book', 'Open Sans', 'Helvetica Neue', Arial, sans-serif;color: #c4b257;border-bottom:1px solid #161616;line-height: 30px;padding-right:50px;background-color:transparent!important;font-weight:100;letter-spacing: 3px;color:#444;}
+.nav-menu .nav > li > a{font-size: 16px;font-family: 'gotham_htf_book', 'Open Sans', 'Helvetica Neue', Arial, sans-serif;color: #c4b257;border-top:1px solid #161616;line-height: 20px;padding-right:50px;background-color:transparent!important;font-weight:100;letter-spacing: 3px;color:#444; margin-top: 5px;}
+.nav-menu .nav > li:first-child > a {
+  border: none !important;
+  margin-top:0;
+}
 .nav-menu .nav > li > a:hover {
   color: #c4b257;
 }
 .nav-menu .nav > li > a.text-primary{color:#ff6f20;border-bottom-width:3px;}
-.nav-menu .nav > li > .nav > li > a, .nav-menu .nav > li.assub > a{font-size: 11px;}
+.nav-menu .nav > li > .nav > li > a, .nav-menu .nav > li.assub > a{font-size: 11px; line-height:10px; letter-spacing: 2px; border: none !important; padding: 5px 50px 5px 5px;margin-top:0;}
+.nav-menu .nav > li > .nav > li > a, .nav-menu .nav > li.assub > a:after { content: "■"; padding-left:25px; }
 body.nav-open{overflow-y:visible;}
 .nav-menu.show {visibility: visible !important;right: 0;-webkit-transition: all 350ms;transition: all 350ms}
 
@@ -8186,5 +8191,51 @@ a.gold {
 .navbar-nav li {
   .fa-phone {
     position:absolute;
+  }
+}
+
+.realtor-box {
+  padding: 15px 15px 15px 100px;
+  background: transparent asset-url('bg-exper.jpg') top left no-repeat;
+  background-size: cover;
+  color: #999;
+  .name {
+    color: #fff;
+    font-size: 18px;
+  }
+  .realtor {
+    font-size:10px;
+  }
+  .phone {
+    color: #fff;
+    width:100%;
+    line-height:35px;
+    font-size:16px;
+    margin-top:10px;
+    border-radius: 0;
+    text-align: center;
+    background-color: #c4b257;
+    margin-bottom:20px;
+  }
+  a {
+    display: block;
+    margin-top:10px;
+    line-height:35px;
+    color: #fff;
+    text-align: center;
+  }
+  hr {
+    border-top: 2px solid #fff;
+    margin-bottom:15px;
+  }
+}
+.quote {
+  margin-bottom:75px;
+  p {
+    padding-top:0;
+    span {
+      font-size:28px;
+      padding-right:10px;
+    }
   }
 }
