--- a/app/views/layouts/contact.html.erb
+++ b/app/views/layouts/contact.html.erb
@@ -30,17 +30,14 @@
 	<div class="main">
     <%= render "layouts/flash_messages" %>
 		<div class="content">
-			<div class="content-left">
+			<div class="content-left" style="text-align:left;">
         <%= image_tag "lets-talk-realestate.png", class: "content-title" %>
-				<div class="content-info">
-					<h2 class="content-info-title">The Ice Condos</h2>
-					<p>York and Bremner</p>
-					<p>(12 York Street & 14 York Street)</p>
-					<p>Harbourfront & Southcore</p>
-					<p>Financial Center, Toronto, ON</p>
-					<p>Canada</p>
-					</span>
-				</div>
+        <br>
+				<%= image_tag "contact-testimonial.png", width: "100px;" %>
+        <p class="quote">
+          <span>&quot;</span> As a first time home buyer, I was apprehensive in working with an agent, as I wanted to find someone I could fully trust; with the biggest purchase of my life. I had spoken to multiple agents prior to meeting with Martin, and due to his informative and approachable demeanor, he immediately had me at ease. He was quick to understand my needs, responsive when handling my inquiries and delicately balanced professionalism with a genuine, effective approach when corresponding, scheduling showings and closing the sale. I can honestly say that it was a seamless transition into owning my first home, and I can't thank Martin enough for all of his efforts in meeting tight deadlines and finding me a beautiful property!
+        </p>
+        <strong>Kimberley W.</strong>
 			</div>
 			<div class="contact-form">
 				<%= yield %>
